--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 【關於校務行政面板】
 =================================================
 校務行政面板，以圖示的方式呈現常用的模組。
-本模組配合輕鬆架中的 -- 佈景管理 -- 選擇設定，預設顯示呈現校務行政選單類別。 
+本模組配合輕鬆架中的 -- 佈景管理 -- 選單設定，預設顯示呈現校務行政選單類別。 
 
 【環境需求】
 =================================================
