--- a/README
+++ b/README
@@ -17,3 +17,8 @@
 =================================================
 1.偏好設定選單類別，可以指定要呈現的選單類別。 
 2.可以在區塊中設定呈現面板。
+
+【更新記錄】
+=================================================
+0.2版，無圖示以按鍵代替。
+0.1版，正式釋出。
