--- a/language/tchinese_utf8/changelog.txt
+++ b/language/tchinese_utf8/changelog.txt
@@ -1,7 +1,7 @@
 【關於校務行政面板】
 =================================================
 校務行政面板，以圖示的方式呈現常用的模組。
-本模組配合輕鬆架中的 -- 佈景管理 -- 選擇設定，預設顯示呈現校務行政選單類別。 
+本模組配合輕鬆架中的 -- 佈景管理 -- 選擇設定，預設顯示呈現校務行政選單類別。
 
 【環境需求】
 =================================================
@@ -15,11 +15,12 @@
 
 【使用方法】
 =================================================
-1.偏好設定選單類別，可以指定要呈現的選單類別。 
+1.偏好設定選單類別，可以指定要呈現的選單類別。
 2.可以在區塊中設定呈現面板。
 
 【更新記錄】
 =================================================
+0.6版，支援 bootstrap 3
 0.5版，偏好加入提醒文字，設定寬度。
 0.2版，無圖示以按鍵代替。
 0.1版，正式釋出。
