--- a/language/tchinese_utf8/changelog.txt
+++ b/language/tchinese_utf8/changelog.txt
@@ -20,7 +20,7 @@
 
 【更新記錄】
 =================================================
-0.7版，手機小螢幕配合
+0.8版，手機小螢幕配合，配合 php7
 0.6版，支援 bootstrap 3
 0.5版，偏好加入提醒文字，設定寬度。
 0.2版，無圖示以按鍵代替。
