--- a/language/tchinese_utf8/changelog.txt
+++ b/language/tchinese_utf8/changelog.txt
@@ -20,6 +20,7 @@
 
 【更新記錄】
 =================================================
+1.0版，符合 2.5.10 模組架構。
 0.9版，支援 bootstrap 4，並移除文字，以免版面不整。
 0.8版，符合 2.5 結構，增加後台直接指定選單類別功能。
 0.7版，手機小螢幕配合，支援 php7
